# masjid-clock

./: Cargo.toml  Dockerfile  README.md  fly.toml
src/: lib.rs  main.rs
src/controller/: display_controller.rs  mod.rs
src/routes/: display_routes.rs  mod.rs
src/types/: display_data.rs  mod.rs
static/js/: app.js  bangla-date.js
templates/: index.html.tera
tests/: integration_tests.rs
